--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,29 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: demo
+        path: /home/runner/work/demo/demo
+  dockerfile:
+    name: Build Image
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+
+      - name: Get artifacts
+        uses: actions/download-artifact@master
+        with:
+          name: demo
+          path: /home/runner/work/demo/demo
+
+      - name: Build & Publish to Registry
+        uses: wuhan005/publish-docker-action@master
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.cn-hongkong.aliyuncs.com
+          repository: registry.cn-hongkong.aliyuncs.com/eggplant/drone-test
+          tag_format: "%YYYY%_%MM%_%DD%_%H%%m%%s%"
+          auto_tag: true
