--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,44 +7,26 @@ on:
     branches: [ main ]
 
 jobs:
-
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15
-
-    - name: Test
-      run: go test -v ./...
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: demo
-        path: /home/runner/work/demo/demo
-
-  dockerfile:
-    name: Build Image
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-
-      - name: Get artifacts
-        uses: actions/download-artifact@master
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          name: demo
-          path: /home/runner/work/demo/demo
-
-      - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: gozeus/demo
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: gozeus/demo:latest
+
